# nullkia

./: CHANGELOG.md  Dockerfile  INSTALL.md  Makefile  README.md  get-nullkia.sh  go.mod  install.ps1  install.sh
.github/workflows/: go.yml
apple/c/: checkm8_tool.c
asus/: README.md
baseband/: README.md
bootrom/: README.md
cellular/: README.md
common/c/: baseband_dump.c
common/go/: adb_wrapper.go
docs/: API.md  INSTALL.md
docs/wiki/: Forensics-Guide.md  Getting-Started.md  Home.md  Troubleshooting.md
fairphone/: README.md
firmware/d/: memory_analyzer.d
firmware/v/: firmware_dumper.v
google/rust/: Cargo.toml  README.md
google/rust/src/: main.rs
gui/: README.md
installer/: 51-nullkia.rules
installer/crystal/: service.cr
installer/nim/: installer.nim
installer/zig/: installer.zig
logins/: auth_system.py
logins/kotlin/: AuthSystem.kt
nothing/: README.md
oppo/: README.md
plugins/: README.md
realme/: README.md
samsung/go/: knox_bypass.go
secure-element/: README.md
tcl/: README.md
tools/haxe/: Main.hx
tools/lua/: device_manager.lua
tools/odin/: lowlevel.odin
tools/perl/: usb_detector.pl
tools/red/: data_processor.red
tools/ruby/: adb_scanner.rb  fastboot_enum.rb
tools/tcl/: device_poller.tcl
trustzone/: README.md
vivo/: README.md
web/: dashboard.php
xiaomi/go/: mi_unlock_bypass.go
zte/: README.md
